[gd_scene load_steps=31 format=4 uid="uid://djrmu87tv4wkg"]

[ext_resource type="Script" path="res://scriptes/global.gd" id="1_vrriy"]
[ext_resource type="Texture2D" uid="uid://ds3cw2i820wos" path="res://Images/BackgroundImages/Green.png" id="2_uxj6t"]
[ext_resource type="Texture2D" uid="uid://btkm7lmpv33h7" path="res://Images/BackgroundImages/Terrain (16x16).png" id="3_bgyfy"]
[ext_resource type="Script" path="res://scriptes/drop.gd" id="4_bydkr"]
[ext_resource type="PackedScene" uid="uid://depowk0755tvm" path="res://Prb/finish.tscn" id="5_jmixx"]
[ext_resource type="PackedScene" uid="uid://e114mc5uddlk" path="res://GameSenecs/Level02.tscn" id="6_lqb6f"]
[ext_resource type="PackedScene" uid="uid://b0v6adyujiye3" path="res://Prb/character_body_2d.tscn" id="7_pqmct"]
[ext_resource type="Texture2D" uid="uid://dvlo74uoo8eib" path="res://Images/Players/Appearing (96x96).png" id="8_rhu1f"]
[ext_resource type="Script" path="res://scriptes/game_manager.gd" id="10_wbrip"]
[ext_resource type="Texture2D" uid="uid://cr7ebufkmpy2g" path="res://Images/Players/heardpix.png" id="11_lk2dr"]
[ext_resource type="Texture2D" uid="uid://bklrabt7hb3xi" path="res://Images/Players/Jump (32x32).png" id="12_pe68a"]
[ext_resource type="Script" path="res://scriptes/pause.gd" id="13_jp0kh"]
[ext_resource type="Script" path="res://scriptes/game_over.gd" id="14_ud4g4"]
[ext_resource type="PackedScene" uid="uid://5h4oh7h75kjf" path="res://Prb/enemy-PigKing.tscn" id="15_wh11a"]
[ext_resource type="Script" path="res://scriptes/monster_manager.gd" id="17_8r2a0"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_7dhwx"]
texture = ExtResource("3_bgyfy")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
6:0/0 = 0
6:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:0/0 = 0
7:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:0/0 = 0
8:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
9:0/0 = 0
9:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
10:0/0 = 0
10:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
12:0/0 = 0
13:0/0 = 0
14:0/0 = 0
15:0/0 = 0
17:0/0 = 0
18:0/0 = 0
19:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
6:1/0 = 0
6:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:1/0 = 0
7:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:1/0 = 0
8:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
9:1/0 = 0
9:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
10:1/0 = 0
10:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
12:1/0 = 0
13:1/0 = 0
14:1/0 = 0
15:1/0 = 0
17:1/0 = 0
18:1/0 = 0
19:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
6:2/0 = 0
6:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:2/0 = 0
7:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:2/0 = 0
8:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
13:2/0 = 0
14:2/0 = 0
15:2/0 = 0
17:2/0 = 0
18:2/0 = 0
19:2/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
6:4/0 = 0
6:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:4/0 = 0
7:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:4/0 = 0
8:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
9:4/0 = 0
9:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
10:4/0 = 0
10:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
12:4/0 = 0
13:4/0 = 0
14:4/0 = 0
15:4/0 = 0
17:4/0 = 0
18:4/0 = 0
19:4/0 = 0
20:4/0 = 0
21:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
6:5/0 = 0
6:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:5/0 = 0
7:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:5/0 = 0
8:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
9:5/0 = 0
9:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
10:5/0 = 0
10:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
12:5/0 = 0
13:5/0 = 0
14:5/0 = 0
15:5/0 = 0
17:5/0 = 0
18:5/0 = 0
19:5/0 = 0
20:5/0 = 0
21:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
6:6/0 = 0
6:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:6/0 = 0
7:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:6/0 = 0
8:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
13:6/0 = 0
14:6/0 = 0
15:6/0 = 0
17:6/0 = 0
18:6/0 = 0
19:6/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
9:8/0 = 0
10:8/0 = 0
12:8/0 = 0
12:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
13:8/0 = 0
13:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
14:8/0 = 0
14:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
15:8/0 = 0
15:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
17:8/0 = 0
18:8/0 = 0
19:8/0 = 0
20:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
6:9/0 = 0
7:9/0 = 0
8:9/0 = 0
9:9/0 = 0
10:9/0 = 0
12:9/0 = 0
12:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
13:9/0 = 0
13:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
14:9/0 = 0
14:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
15:9/0 = 0
15:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
17:9/0 = 0
18:9/0 = 0
19:9/0 = 0
20:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
6:10/0 = 0
7:10/0 = 0
8:10/0 = 0
13:10/0 = 0
13:10/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
14:10/0 = 0
14:10/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
15:10/0 = 0
15:10/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
18:10/0 = 0
19:10/0 = 0
20:10/0 = 0

[sub_resource type="TileSet" id="TileSet_ovi3v"]
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_7dhwx")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jo3ja"]
size = Vector2(29.4319, 243.32)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wxv2h"]
size = Vector2(45, 1663)

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_kttlf"]

[sub_resource type="AtlasTexture" id="AtlasTexture_wqaem"]
atlas = ExtResource("8_rhu1f")
region = Rect2(0, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_e0k4n"]
atlas = ExtResource("8_rhu1f")
region = Rect2(96, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_f7jkh"]
atlas = ExtResource("8_rhu1f")
region = Rect2(192, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_c6q8k"]
atlas = ExtResource("8_rhu1f")
region = Rect2(288, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_4emah"]
atlas = ExtResource("8_rhu1f")
region = Rect2(384, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_h66f1"]
atlas = ExtResource("8_rhu1f")
region = Rect2(480, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_iw0e3"]
atlas = ExtResource("8_rhu1f")
region = Rect2(576, 0, 96, 96)

[sub_resource type="SpriteFrames" id="SpriteFrames_ikstn"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wqaem")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e0k4n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f7jkh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c6q8k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4emah")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h66f1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iw0e3")
}],
"loop": false,
"name": &"spawn",
"speed": 15.0
}]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ai356"]
texture = ExtResource("12_pe68a")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_io256"]
content_margin_left = 8.0
content_margin_top = 8.0
content_margin_right = 8.0
content_margin_bottom = 8.0
bg_color = Color(0, 0, 0, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[node name="Level01" type="Node"]
script = ExtResource("1_vrriy")

[node name="World" type="Node" parent="."]

[node name="StaticBody2D" type="StaticBody2D" parent="World"]

[node name="TextureRect" type="TextureRect" parent="World/StaticBody2D"]
visible = false
texture_filter = 1
offset_top = 24.0
offset_right = 3096.0
offset_bottom = 645.0
texture = ExtResource("2_uxj6t")
stretch_mode = 1

[node name="TileMap" type="TileMap" parent="World/StaticBody2D"]
tile_set = SubResource("TileSet_ovi3v")
format = 2

[node name="Layer1" type="TileMapLayer" parent="World/StaticBody2D/TileMap"]
use_parent_material = true
scale = Vector2(3, 3)
tile_map_data = PackedByteArray("AAABAA0AAAAHAAAAAAACAA0AAAAHAAAAAAADAA0AAAAHAAAAAAAEAA0AAAAHAAAAAAAIAA0AAAAHAAAAAAAJAA0AAAAHAAAAAAAKAA0AAAAHAAAAAAALAA0AAAAHAAAAAAAMAA0AAAAHAAAAAAANAA0AAAAHAAAAAAAOAA0AAAAHAAAAAAAPAA0AAAAHAAAAAAAQAA0AAAAHAAAAAAARAA0AAAAHAAAAAAASAA0AAAAHAAAAAAATAA0AAAAHAAAAAAAUAA0AAAAHAAAAAAAAAA0AAAAGAAAAAAD//wsAAAAPAAkAAAD//wwAAAAPAAkAAAD//w0AAAAPAAoAAAD//woAAAAPAAkAAAD//wkAAAAPAAkAAAD//wgAAAAPAAkAAAD//wcAAAAPAAkAAAD//wYAAAAPAAkAAAD//wUAAAAPAAkAAAD//wQAAAAPAAkAAAD//wMAAAAPAAkAAAD//wEAAAAPAAkAAAD//wIAAAAPAAkAAAD//wAAAAAMAAgAAAAlAA0AAAAHAAAAAAAmAA0AAAAHAAAAAAAnAA0AAAAIAAAAAAAcAA0AAAAHAAAAAAAdAA0AAAAHAAAAAAAZAA0AAAAHAAAAAAAaAA0AAAAHAAAAAAAbAA0AAAAHAAAAAAAFAA0AAAAHAAAAAAAGAA0AAAAHAAAAAAAHAA0AAAAHAAAAAABAAAAAAAAOAAgAAABAAAEAAAAPAAkAAABAAAIAAAAPAAkAAABAAAMAAAAPAAkAAABAAAQAAAAPAAkAAABAAAUAAAAPAAkAAABAAAYAAAAPAAkAAABAAAcAAAAPAAkAAABAAAgAAAAPAAkAAABAAAkAAAAPAAkAAABAAAoAAAAPAAkAAABAAAsAAAAPAAkAAABAAAwAAAAPAAkAAABAAA0AAAAPAAoAAAAoAA0AAAAHAAAAAAApAA0AAAAHAAAAAAAqAA0AAAAHAAAAAAArAA0AAAAHAAAAAAAsAA0AAAAHAAAAAAAtAA0AAAAHAAAAAAA/AA0AAAAHAAAAAAAAAAAAAAANAAgAAAABAAAAAAANAAgAAAACAAAAAAANAAgAAAADAAAAAAANAAgAAAAEAAAAAAANAAgAAAAFAAAAAAANAAgAAAAGAAAAAAANAAgAAAAHAAAAAAANAAgAAAAIAAAAAAANAAgAAAAJAAAAAAANAAgAAAAKAAAAAAANAAgAAAALAAAAAAANAAgAAAAMAAAAAAANAAgAAAANAAAAAAANAAgAAAAOAAAAAAANAAgAAAAPAAAAAAANAAgAAAAQAAAAAAANAAgAAAARAAAAAAANAAgAAAASAAAAAAANAAgAAAATAAAAAAANAAgAAAAUAAAAAAANAAgAAAAVAAAAAAANAAgAAAAWAAAAAAANAAgAAAAXAAAAAAANAAgAAAAYAAAAAAANAAgAAAAZAAAAAAANAAgAAAAaAAAAAAANAAgAAAAbAAAAAAANAAgAAAAcAAAAAAANAAgAAAAdAAAAAAANAAgAAAAeAAAAAAANAAgAAAAfAAAAAAANAAgAAAAgAAAAAAANAAgAAAAhAAAAAAANAAgAAAAiAAAAAAANAAgAAAAjAAAAAAANAAgAAAAkAAAAAAANAAgAAAAlAAAAAAANAAgAAAAmAAAAAAANAAgAAAAnAAAAAAANAAgAAAAoAAAAAAANAAgAAAApAAAAAAANAAgAAAAqAAAAAAANAAgAAAArAAAAAAANAAgAAAAsAAAAAAANAAgAAAAtAAAAAAANAAgAAAAuAAAAAAANAAgAAAAvAAAAAAANAAgAAAAwAAAAAAANAAgAAAAxAAAAAAANAAgAAAAyAAAAAAANAAgAAAAzAAAAAAANAAgAAAA0AAAAAAANAAgAAAA1AAAAAAANAAgAAAA2AAAAAAANAAgAAAA3AAAAAAANAAgAAAA4AAAAAAANAAgAAAA5AAAAAAANAAgAAAA6AAAAAAANAAgAAAA7AAAAAAANAAgAAAA8AAAAAAANAAgAAAA9AAAAAAANAAgAAAA+AAAAAAANAAgAAAA/AAAAAAANAAgAAAA=")
tile_set = SubResource("TileSet_ovi3v")

[node name="CollisionShape2DLeft" type="CollisionShape2D" parent="World/StaticBody2D"]
position = Vector2(-30.5, -175)
scale = Vector2(1.73281, -6.90449)
shape = SubResource("RectangleShape2D_jo3ja")

[node name="CollisionShape2DRight" type="CollisionShape2D" parent="World/StaticBody2D"]
position = Vector2(3094.5, -172.5)
shape = SubResource("RectangleShape2D_wxv2h")

[node name="SpawnAreaVisualizer" type="Polygon2D" parent="World"]
position = Vector2(628, 576)
scale = Vector2(1.04242, 0.161615)
color = Color(1, 1, 1, 0)
polygon = PackedVector2Array(167, 201, 599.564, 173.251, 1168.43, 154.689, 1332.47, 247.502, 2321.51, -309.378, 2318.95, 130.666, 694.535, 210.377, 283.954, 191.814)

[node name="Drop" type="Area2D" parent="World"]
position = Vector2(365, 733)
script = ExtResource("4_bydkr")

[node name="CollisionShape2D" type="CollisionShape2D" parent="World/Drop"]
position = Vector2(606, 11)
shape = SubResource("WorldBoundaryShape2D_kttlf")

[node name="Finish" parent="World" instance=ExtResource("5_jmixx")]
position = Vector2(3004, -923)
scale = Vector2(1.5, 1.5)
target_level = ExtResource("6_lqb6f")

[node name="Players" type="Node" parent="."]

[node name="CharacterBody2D" parent="Players" instance=ExtResource("7_pqmct")]
position = Vector2(75, 576)
scale = Vector2(3, 3)

[node name="Camera2D" type="Camera2D" parent="Players/CharacterBody2D"]
position = Vector2(-0.333332, 1.66666)
scale = Vector2(0.333333, 0.333333)
position_smoothing_enabled = true
position_smoothing_speed = 7.0

[node name="SpawnSprite" type="AnimatedSprite2D" parent="Players"]
position = Vector2(76, 576)
sprite_frames = SubResource("SpriteFrames_ikstn")
animation = &"spawn"

[node name="iTems" type="Node" parent="."]

[node name="GameManager" type="Node" parent="." node_paths=PackedStringArray("points_label", "hearts")]
unique_name_in_owner = true
script = ExtResource("10_wbrip")
points_label = NodePath("../UI/CanvasLayer/Panel/PointsLable")
hearts = [NodePath("../UI/CanvasLayer/Healths/HBoxContainer/PlayerHealth"), NodePath("../UI/CanvasLayer/Healths/HBoxContainer/PlayerHealth2"), NodePath("../UI/CanvasLayer/Healths/HBoxContainer/PlayerHealth3")]

[node name="UI" type="Node" parent="."]

[node name="CanvasLayer" type="CanvasLayer" parent="UI"]

[node name="Panel" type="Panel" parent="UI/CanvasLayer"]
offset_left = 4.0
offset_top = 34.0
offset_right = 137.0
offset_bottom = 71.0
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="PointsLable" type="Label" parent="UI/CanvasLayer/Panel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -1.0
offset_bottom = -1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 19
text = "已获得：0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Healths" type="Panel" parent="UI/CanvasLayer"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -127.0
offset_top = 34.0
offset_right = 4.0
offset_bottom = 69.0
grow_horizontal = 0

[node name="HBoxContainer" type="HBoxContainer" parent="UI/CanvasLayer/Healths"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -64.5
offset_top = -17.0
offset_right = 64.5
offset_bottom = 17.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="PlayerHealth" type="TextureRect" parent="UI/CanvasLayer/Healths/HBoxContainer"]
texture_filter = 1
layout_mode = 2
texture = ExtResource("11_lk2dr")
expand_mode = 2

[node name="PlayerHealth2" type="TextureRect" parent="UI/CanvasLayer/Healths/HBoxContainer"]
texture_filter = 1
layout_mode = 2
texture = ExtResource("11_lk2dr")
expand_mode = 2

[node name="PlayerHealth3" type="TextureRect" parent="UI/CanvasLayer/Healths/HBoxContainer"]
texture_filter = 1
layout_mode = 2
texture = ExtResource("11_lk2dr")
expand_mode = 2

[node name="RestartNum" type="Panel" parent="UI/CanvasLayer"]
texture_filter = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -34.0
offset_right = 38.0
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxTexture_ai356")

[node name="NumberLabel" type="Label" parent="UI/CanvasLayer/RestartNum"]
unique_name_in_owner = true
texture_filter = 1
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 31.0
offset_top = -34.0
offset_right = 76.0
offset_bottom = 2.0
grow_vertical = 0
theme_override_font_sizes/font_size = 26
text = " X 3"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Pause" type="Node" parent="UI/CanvasLayer"]
script = ExtResource("13_jp0kh")

[node name="PausePanel" type="Panel" parent="UI/CanvasLayer/Pause"]
unique_name_in_owner = true
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="UI/CanvasLayer/Pause/PausePanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -112.0
offset_top = -210.0
offset_right = 113.0
offset_bottom = -99.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 81
text = "暂   停"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="UI/CanvasLayer/Pause/PausePanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -128.0
offset_top = -8.0
offset_right = 132.0
offset_bottom = 153.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15

[node name="Resume" type="Button" parent="UI/CanvasLayer/Pause/PausePanel/VBoxContainer"]
process_mode = 3
layout_mode = 2
theme_override_font_sizes/font_size = 41
theme_override_styles/normal = SubResource("StyleBoxFlat_io256")
text = "恢  复"

[node name="Menu" type="Button" parent="UI/CanvasLayer/Pause/PausePanel/VBoxContainer"]
process_mode = 3
layout_mode = 2
theme_override_font_sizes/font_size = 41
theme_override_styles/normal = SubResource("StyleBoxFlat_io256")
text = "返回首页"

[node name="Game_Over" type="Node" parent="UI/CanvasLayer"]
script = ExtResource("14_ud4g4")

[node name="GameOverPanel" type="Panel" parent="UI/CanvasLayer/Game_Over"]
unique_name_in_owner = true
visible = false
texture_filter = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = -3.0
grow_horizontal = 2
grow_vertical = 2

[node name="reset_count" type="Label" parent="UI/CanvasLayer/Game_Over/GameOverPanel"]
layout_mode = 1
offset_right = 172.0
offset_bottom = 67.0
theme_override_font_sizes/font_size = 26
text = "Rount"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label" type="Label" parent="UI/CanvasLayer/Game_Over/GameOverPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -112.0
offset_top = -210.0
offset_right = 113.0
offset_bottom = -99.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 81
text = "Game Over"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="UI/CanvasLayer/Game_Over/GameOverPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -128.0
offset_top = -8.0
offset_right = 132.0
offset_bottom = 153.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15

[node name="Restartgame" type="Button" parent="UI/CanvasLayer/Game_Over/GameOverPanel/VBoxContainer"]
process_mode = 3
layout_mode = 2
theme_override_font_sizes/font_size = 41
theme_override_styles/normal = SubResource("StyleBoxFlat_io256")
text = "重来"

[node name="Menu" type="Button" parent="UI/CanvasLayer/Game_Over/GameOverPanel/VBoxContainer"]
process_mode = 3
layout_mode = 2
theme_override_font_sizes/font_size = 41
theme_override_styles/normal = SubResource("StyleBoxFlat_io256")
text = "返回首页"

[node name="ATEnemys" type="Node" parent="."]

[node name="MonsterManager" type="Node" parent="." node_paths=PackedStringArray("game_manager", "enemies_node")]
process_mode = 3
script = ExtResource("17_8r2a0")
monster_scene = ExtResource("15_wh11a")
game_manager = NodePath("../GameManager")
enemies_node = NodePath("../ATEnemys")
max_monsters = 3
spawn_interval = 1.0
player_node_path = NodePath("../Players")

[node name="Timer" type="Timer" parent="MonsterManager"]

[node name="Traps" type="Node" parent="."]

[connection signal="body_entered" from="World/Drop" to="World/Drop" method="_on_body_entered"]
[connection signal="body_entered" from="World/Drop" to="World/Finish" method="_on_area_2d_body_entered"]
[connection signal="pressed" from="UI/CanvasLayer/Pause/PausePanel/VBoxContainer/Resume" to="UI/CanvasLayer/Pause" method="_on_resume_pressed"]
[connection signal="pressed" from="UI/CanvasLayer/Pause/PausePanel/VBoxContainer/Menu" to="UI/CanvasLayer/Pause" method="_on_menu_pressed"]
[connection signal="pressed" from="UI/CanvasLayer/Game_Over/GameOverPanel/VBoxContainer/Restartgame" to="UI/CanvasLayer/Game_Over" method="_on_restartgame_pressed"]
[connection signal="pressed" from="UI/CanvasLayer/Game_Over/GameOverPanel/VBoxContainer/Menu" to="UI/CanvasLayer/Game_Over" method="_on_menu_pressed"]
